--- a/stylesheets/utilities.scss
+++ b/stylesheets/utilities.scss
@@ -7,5 +7,9 @@ $Gray: #4E4E50;
 
 /*body*/
 $DarkBlue:#1F2833;
-$Pink:#F76C6C;
+$Pink:#993366;
 $LightBlue:#E3E2DF;
+$Red: #F30029;
+$Orange:#F9521C;
+$Yellow:#fedf3d;
+$Blue:#66cccc;
