--- a/stylesheets/header.scss
+++ b/stylesheets/header.scss
@@ -42,7 +42,8 @@ header {
 
         span {
             height: 50px;
-            font-size: xx-large;
+            font-size:larger;
+            margin-top:1em;
             letter-spacing: .2em;
             font-variant: all-petite-caps;
             color: $White;
