--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -10,3 +10,10 @@
 */
 @import './general.scss';
 @import './header.scss';
+@import './skills.scss';
+
+/*Mobile
+======================================
+*/
+
+@import './mobile.scss';
