--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -11,6 +11,7 @@
 @import './general.scss';
 @import './header.scss';
 @import './skills.scss';
+@import './work.scss';
 
 /*Mobile
 ======================================
