--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -174,6 +174,77 @@ header {
       border-radius: .9em;
       background: white; }
 
+/*Work
+======================================
+*/
+.latest-work {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  align-items: center;
+  width: 100vw;
+  height: -webkit-fill-available; }
+  .latest-work .work-content {
+    width: 40%;
+    padding: 0rem 2rem;
+    color: #fff;
+    text-align: -webkit-center; }
+    .latest-work .work-content h1 {
+      font-size: x-large; }
+    .latest-work .work-content p {
+      margin-top: .5rem;
+      margin-bottom: 2rem; }
+    .latest-work .work-content a {
+      text-decoration: none;
+      border-radius: 1em;
+      border: solid .09em white;
+      padding: .5em 1em;
+      color: white;
+      cursor: pointer; }
+
+/*slider*/
+.slide-container {
+  width: 60%;
+  height: 380px; }
+
+.slider {
+  width: 100%;
+  height: 325px;
+  margin-top: 10px;
+  overflow: hidden; }
+
+.thumbs {
+  position: relative;
+  height: 100%;
+  width: 1950px;
+  transition: transform 2s; }
+
+.thumbs div {
+  width: 280px;
+  height: 300px;
+  margin: 10px;
+  border-radius: 1em;
+  background: #fff;
+  float: left;
+  position: relative;
+  transition: all 2s; }
+
+.prev, .next {
+  border: solid .1em white;
+  width: 56px;
+  height: 25px;
+  margin-left: 4rem;
+  cursor: pointer;
+  outline: none;
+  transition: all 0.3s;
+  background: none;
+  color: #fff; }
+
+.next {
+  left: calc(100% - 40px); }
+
 /*Mobile
 ======================================
 */
@@ -186,6 +257,17 @@ header {
 
   .skill {
     width: 90% !important;
-    margin-top: 1rem; } }
+    margin-top: 1rem; }
+
+  .latest-work {
+    flex-direction: column; }
+    .latest-work .work-content {
+      width: 60%; }
+
+  .slide-container {
+    width: 100%; }
+
+  .prev, .next {
+    margin-left: 6rem; } }
 
 /*# sourceMappingURL=style.css.map */
