--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -12,6 +12,9 @@
 @import './header.scss';
 @import './skills.scss';
 @import './work.scss';
+@import './about.scss';
+@import './contact.scss';
+@import './modal-work.scss';
 
 /*Mobile
 ======================================
