--- a/stylesheets/work.scss
+++ b/stylesheets/work.scss
@@ -2,69 +2,65 @@
 ======================================
 */
 
-.latest-work{
-@include flexbox;
-width: 100vw;
-     height: -webkit-fill-available;
-	.work-content{
-	    width: 40%;
-	    padding: 0rem 2rem;
-	    color:$White;
-	        text-align: -webkit-center;
+.latest-work {
+    @include flexbox;
+    width: 100vw;
+    margin: 5rem 0rem;
 
-        h1 {
-            font-size: x-large;
-        }
+    .work-content {
+        width: 40%;
+        padding: 0rem 2rem;
+        color: $White;
+        text-align: -webkit-center;
 
-        p {
-            margin-top: .5rem;
-            margin-bottom:2rem;
-        }
-        a{
+
+        a {
             text-decoration: none;
-    border-radius: 1em;
-    border: solid .09em white;
-    padding: .5em 1em;
-    color: white;
-    cursor: pointer;
+            border-radius: 1em;
+            border: solid .09em white;
+            padding: .5em 1em;
+            color: white;
+            cursor: pointer;
+
         }
-	}
+    }
 }
 
 
 /*slider*/
-.slide-container{
+.slide-container {
     width: 60%;
-	height: 380px;
+    height: 380px;
 }
 
-.slider{
-	width: 100%;
-	height: 325px;
-	margin-top: 10px;
-	overflow:hidden;
+.slider {
+    width: 100%;
+    height: 325px;
+    margin-top: 10px;
+    overflow: hidden;
 }
 
-.thumbs{
-position: relative;
-height: 100%;
-width:1950px;
-transition: transform 2s;
+.thumbs {
+    position: relative;
+    height: 100%;
+    width: 1950px;
+    transition: transform 2s;
 }
 
-.thumbs div{
-	width: 280px;
-	height: 300px;
-	margin:10px;
-	border-radius: 1em;
-	background:$White;
-	float: left;
-	position: relative;
-	transition: all 2s;
+.thumbs div {
+    width: 280px;
+    height: 300px;
+    margin: 10px;
+    border-radius: 1em;
+    background: $White;
+    float: left;
+    position: relative;
+    transition: all 2s;
 }
 
-.prev, .next{
-	border: solid .1em white;
+.prev,
+.next {
+    border: solid .1em white;
     width: 56px;
     height: 25px;
     margin-left: 4rem;
@@ -76,6 +72,6 @@ transition: transform 2s;
 
 }
 
-.next{
-	left: calc(100% - 40px);
+.next {
+    left: calc(100% - 40px);
 }
