--- a/stylesheets/mobile.scss
+++ b/stylesheets/mobile.scss
@@ -24,4 +24,24 @@
 	.prev, .next{
 	margin-left:6rem;
 	}
+
+	.thumbs{
+	    width: max-content;
+	}
+	.ms-touch.slider {
+  overflow-x: scroll;
+  overflow-y: hidden;
+  
+  -ms-overflow-style: none;
+  /* Hides the scrollbar. */
+  
+  -ms-scroll-chaining: none;
+  /* Prevents Metro from swiping to the next tab or app. */
+  
+  -ms-scroll-snap-type: mandatory;
+  /* Forces a snap scroll behavior on your images. */
+  
+  -ms-scroll-snap-points-x: snapInterval(0%, 100%);
+  /* Defines the y and x intervals to snap to when scrolling. */
+}
 }
