--- a/stylesheets/modal-work.scss
+++ b/stylesheets/modal-work.scss
@@ -13,59 +13,109 @@
     overflow: auto;
     overflow-x: hidden;
     transition: 0.5s;
+
+    .work-content {
+        width: 100vw;
+        @include flexbox;
+        flex-direction: column;
+
+        .project {
+        margin-top:5rem;
+            width: 100%;
+            height: 20rem;
+            @include flexbox;
+            flex-direction: row;
+
+            section {
+                width: 50%;
+            }
+
+            .tittle {
+                height: 15rem;
+                text-align: -webkit-center;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                box-shadow: 2px 1px 7px black;
+
+                h1 {
+                    font-size: 3em;
+                    color: $Red;
+                }
+
+            }
+
+            .about-work {
+                box-shadow: 8px 0px 2px $Red;
+    position: relative;
+    z-index: 99;
+                height: 20rem;
+                text-align: -webkit-center;
+            }
+
+            .work-img {
+                background-image: url(../images/header-img2.jpg);
+                background-repeat: no-repeat;
+                background-position: center;
+                background-size: cover;
+                height: 15rem;
+            }
+        }
+    }
 }
 
 
 
-    .icon {
-        margin: 1.5rem;
-        margin-top: 2rem;
-        display: block;
-        text-align: -webkit-right;
-        cursor: pointer;
+.icon {
+    margin: 1.5rem;
+    margin-top: 2rem;
+    display: block;
+    text-align: -webkit-right;
+    cursor: pointer;
+
+    .bar1,
+    .bar2,
+    .bar3 {
+        width: 40px;
+        height: 2px;
+        background: #000;
+        margin: 6px 0;
+        transition: 0.4s;
+    }
+
+    .bar2 {
+        background: none;
+        font-variant: all-petite-caps;
+        font-size: large;
+        background: none;
+        text-align: center;
+        padding-bottom: 20px;
+        margin-top: -8px;
+    }
+
+    &:hover {
 
         .bar1,
-        .bar2,
         .bar3 {
-            width: 40px;
-            height: 2px;
-            background: #000;
-            margin: 6px 0;
-            transition: 0.4s;
+            background: $Red;
+        }
+
+        .bar1 {
+            -webkit-transform: rotate(-20deg) translate(-9px, 6px);
+            transform: rotate(-40deg) translate(-14px, 8px);
         }
 
         .bar2 {
-            background: none;
-            font-variant: all-petite-caps;
-            font-size: large;
-            background: none;
-            text-align: center;
-            padding-bottom: 20px;
-            margin-top: -8px;
+            opacity: 0;
         }
 
-        &:hover {
-
-            .bar1,
-            .bar3 {
-                background: $Red;
-            }
-
-            .bar1 {
-                -webkit-transform: rotate(-20deg) translate(-9px, 6px);
-                transform: rotate(-40deg) translate(-14px, 8px);
-            }
-
-            .bar2 {
-                opacity: 0;
-            }
-
-            .bar3 {
-                -webkit-transform: rotate(45deg) translate(-8px, -8px);
-                transform: rotate(40deg) translate(-9px, -8px);
-            }
+        .bar3 {
+            -webkit-transform: rotate(45deg) translate(-8px, -8px);
+            transform: rotate(40deg) translate(-9px, -8px);
         }
     }
+}
 
 
 
