--- a/stylesheets/about.scss
+++ b/stylesheets/about.scss
@@ -6,7 +6,7 @@
     @include flexbox;
     flex-direction: row;
     width: 100vw;
-    height: max-content;
+    height: 40rem;
     margin-bottom: 2rem;
 
     .about-image {
