--- a/stylesheets/skills.scss
+++ b/stylesheets/skills.scss
@@ -6,7 +6,7 @@
     @include flexbox;
     flex-direction: column;
     width: 100vw;
-        height: auto;
+        height: 40rem;
         margin-bottom:2rem;
 
     .skills-description {
