--- a/stylesheets/mobile.scss
+++ b/stylesheets/mobile.scss
@@ -13,22 +13,28 @@
 	}
 
 	.latest-work {
-	    flex-direction: column;
+	    flex-direction: column-reverse;
+	    margin:10rem 0rem;
 
 	    .work-content {
 	        width: 60%;
 	    }
 
 	}
-
+/*image slider touch*/
 	.slide-container {
 	    width: 100%;
+	    height: 323px;
+    overflow-y: hidden;
+        margin-bottom: 2rem;
+
+	    .prev,
+	.next {
+	   display:none;
+	}
 	}
 
-	.prev,
-	.next {
-	    margin-left: 6rem;
-	}
+	
 
 	.thumbs {
 	    width: max-content;
@@ -49,4 +55,13 @@
 
 	    -ms-scroll-snap-points-x: snapInterval(0%, 100%);
 	    /* Defines the y and x intervals to snap to when scrolling. */}
+}
+/*about*/
+.about{
+	flex-direction:column;
+	height:30rem;
+	.about-image{
+	width:100%;
+	margin-bottom:1rem;
+	}
 }
