--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -170,7 +170,7 @@ header {
   align-items: center;
   flex-direction: column;
   width: 100vw;
-  height: 40rem;
+  height: 25rem;
   margin-bottom: 2rem; }
   .skills .skills-description {
     width: 60vw;
@@ -219,7 +219,8 @@ header {
 /*slider*/
 .slide-container {
   width: 60%;
-  height: 380px; }
+  height: 323px;
+  overflow-y: hidden; }
 
 .slider {
   width: 100%;
@@ -436,16 +437,20 @@ header {
     margin-top: 1rem; }
 
   .latest-work {
-    flex-direction: column; }
+    flex-direction: column-reverse;
+    margin: 10rem 0rem; }
     .latest-work .work-content {
       width: 60%; }
 
+  /*image slider touch*/
   .slide-container {
-    width: 100%; }
-
-  .prev,
-  .next {
-    margin-left: 6rem; }
+    width: 100%;
+    height: 323px;
+    overflow-y: hidden;
+    margin-bottom: 2rem; }
+    .slide-container .prev,
+    .slide-container .next {
+      display: none; }
 
   .thumbs {
     width: max-content; }
@@ -461,5 +466,12 @@ header {
     /* Forces a snap scroll behavior on your images. */
     -ms-scroll-snap-points-x: snapInterval(0%, 100%);
     /* Defines the y and x intervals to snap to when scrolling. */ } }
+/*about*/
+.about {
+  flex-direction: column;
+  height: 30rem; }
+  .about .about-image {
+    width: 100%;
+    margin-bottom: 1rem; }
 
 /*# sourceMappingURL=style.css.map */
