--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -218,9 +218,7 @@ header {
 
 /*slider*/
 .slide-container {
-  width: 60%;
-  height: 323px;
-  overflow-y: hidden; }
+  width: 60%; }
 
 .slider {
   width: 100%;
@@ -333,7 +331,6 @@ header {
     #work .work-content .project {
       margin-top: 5rem;
       width: 100%;
-      height: 20rem;
       display: -webkit-box;
       display: -moz-box;
       display: -webkit-flex;
@@ -344,28 +341,24 @@ header {
       #work .work-content .project section {
         width: 50%; }
       #work .work-content .project .tittle {
-        height: 15rem;
+        z-index: 99;
+        height: 22rem;
         text-align: -webkit-center;
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
+        background: aliceblue;
         box-shadow: 2px 1px 7px black; }
         #work .work-content .project .tittle h1 {
           font-size: 3em;
           color: #ff3333; }
-      #work .work-content .project .about-work {
-        box-shadow: 8px 0px 2px #ff3333;
-        position: relative;
-        z-index: 99;
-        height: 20rem;
-        text-align: -webkit-center; }
       #work .work-content .project .work-img {
         background-image: url(../images/header-img2.jpg);
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
-        height: 15rem; }
+        height: 20rem; }
 
 .icon {
   margin: 1.5rem;
@@ -401,6 +394,29 @@ header {
     -webkit-transform: rotate(45deg) translate(-8px, -8px);
     transform: rotate(40deg) translate(-9px, -8px); }
 
+/*float style*/
+.slideanim {
+  visibility: hidden;
+  visibility: visible\9;
+  /*For old IE browsers IE6-8 */ }
+
+.slideanim.slide {
+  visibility: visible;
+  animation: slide 1s; }
+
+.slideanim::after {
+  /* useful when its child elements are float:left; */
+  content: "";
+  display: table;
+  clear: both; }
+
+@keyframes slide {
+  0% {
+    opacity: 0;
+    transform: translateY(50%); }
+  100% {
+    opacity: 1;
+    transform: translateY(0); } }
 #scroll-top {
   display: none;
   text-align: center;
