--- a/stylesheets/about.scss
+++ b/stylesheets/about.scss
@@ -16,7 +16,7 @@
         background-image: url(../images/Header.jpg);
         background-position: center top;
         background-repeat: no-repeat;
-        background-size: cover;
+        background-size: contain;
 
     }
 
