--- a/stylesheets/mobile.scss
+++ b/stylesheets/mobile.scss
@@ -2,66 +2,75 @@
 ======================================
 */
 
-@media only screen and(max-width:480px){
-	.skills {
-	    padding: 0rem !important;
-	}
+@media only screen and(max-width:480px) {
+    .skills {
+        padding: 0rem !important;
+    }
 
-	.skill {
-	    width: 90% !important;
-	    margin-top: 1rem;
-	}
+    .skill {
+        width: 90% !important;
+        margin-top: 1rem;
+    }
 
-	.latest-work {
-	    flex-direction: column-reverse;
-	    margin:10rem 0rem;
+    .latest-work {
+        flex-direction: column-reverse;
+        margin: 10rem 0rem;
 
-	    .work-content {
-	        width: 60%;
-	    }
+        .work-content {
+            width: 60%;
+        }
 
-	}
-/*image slider touch*/
-	.slide-container {
-	    width: 100%;
-	    height: 323px;
-    overflow-y: hidden;
+    }
+    .more-projects{
+    div{
+    width:50%;
+    }
+    }
+
+    /*image slider touch*/
+    .slide-container {
+        width: 100%;
+        height: 323px;
+        overflow-y: hidden;
         margin-bottom: 2rem;
 
-	    .prev,
-	.next {
-	   display:none;
-	}
-	}
+        .prev,
+        .next {
+            display: none;
+        }
+    }
 
-	
 
-	.thumbs {
-	    width: max-content;
-	}
 
-	.ms-touch.slider {
-	    overflow-x: scroll;
-	    overflow-y: hidden;
+    .thumbs {
+        width: max-content;
+    }
 
-	    -ms-overflow-style: none;
-	    /* Hides the scrollbar. */
+    .ms-touch.slider {
+        overflow-x: scroll;
+        overflow-y: hidden;
 
-	    -ms-scroll-chaining: none;
-	    /* Prevents Metro from swiping to the next tab or app. */
+        -ms-overflow-style: none;
+        /* Hides the scrollbar. */
 
-	    -ms-scroll-snap-type: mandatory;
-	    /* Forces a snap scroll behavior on your images. */
+        -ms-scroll-chaining: none;
+        /* Prevents Metro from swiping to the next tab or app. */
 
-	    -ms-scroll-snap-points-x: snapInterval(0%, 100%);
-	    /* Defines the y and x intervals to snap to when scrolling. */}
+        -ms-scroll-snap-type: mandatory;
+        /* Forces a snap scroll behavior on your images. */
+
+        -ms-scroll-snap-points-x: snapInterval(0%, 100%);
+        /* Defines the y and x intervals to snap to when scrolling. */
+    }
 }
+
 /*about*/
-.about{
-	flex-direction:column;
-	height:30rem;
-	.about-image{
-	width:100%;
-	margin-bottom:1rem;
-	}
+.about {
+    flex-direction: column;
+    height: 30rem;
+
+    .about-image {
+        width: 100%;
+        margin-bottom: 1rem;
+    }
 }
